# oracle-to-postgre-to-oracle

./: .env.example  .gitignore  README.md  config.yaml.example  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
configs/: table_overrides.example.yaml  tables.example.yaml  tables.yaml.example
docs/: CONFIG_REFERENCE.md  DBA_DAILY_OPERATIONS.md  DEVELOPER_GUIDE.md  OPERATOR_QUICK_START_ID.md  ORACLE_CLIENT_INSTALL.md  PRODUCTION_FEATURES.md  PRODUCTION_RUNBOOK.md  REPORT_REFERENCE.md  TROUBLESHOOTING.md  USER_GUIDE.md
jobs/: common.sh  crontab.example  crontab.production.example  daily.sh  every_5min.sh  incremental.sh  production_cutoff.sh  production_keepup.sh
jobs/templates/: daily.sh  every_5min.sh
oracle_pg_sync/: __init__.py  __main__.py  alerting.py  checkpoint.py  cli.py  config.py  dependency_health.py  lob.py  lob_analysis.py  manifest.py  ops.py  rollback.py  sequence_sync.py  validation.py
oracle_pg_sync/db/: oracle.py  postgres.py
oracle_pg_sync/metadata/: __init__.py  compare.py  object_compare.py  oracle_metadata.py  postgres_metadata.py  type_mapping.py
oracle_pg_sync/reports/: __init__.py  sequence_html.py  writer_csv.py  (+2 more)
tests/: integration_reverse_merge_container.py  integration_safe_sync_container.py  test_checkpoint.py  test_cli.py  test_compare.py  test_config.py  test_dependency_maintenance.py  test_jobs.py  test_lob.py  test_manifest.py  test_object_compare.py  test_ops_smoke.py  test_oracle_names.py  test_oracle_to_postgres_sync.py  test_postgres_to_oracle_sync.py  test_reports.py  test_type_mapping.py  test_validation.py  test_writer_excel.py  test_writer_html.py
tools/: audit_reference_10m_incremental.py  centralize_daily_runs.py
(+10 files in other folders)
